[gd_scene load_steps=6 format=2]

[ext_resource path="res://files/scenes/GearTooltip.gd" type="Script" id=1]
[ext_resource path="res://assets/images/gui/forge/divider_forge_tooltip.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gui/charpanel/panel_skilltooltip.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/mainfont_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://files/scenes/combat/ResistIcon.tscn" type="PackedScene" id=5]

[node name="Tooltip" type="Control"]
margin_right = 400.0
margin_bottom = 228.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "The text has to color all text up to current upgrade level "
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -10.0
margin_bottom = 79.0
mouse_filter = 2

[node name="level" type="Label" parent="VBoxContainer"]
margin_right = 380.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 4 )
text = "level 1"
align = 1
valign = 1

[node name="desc" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 380.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "description"
autowrap = true

[node name="divider" type="Control" parent="VBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 380.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/divider"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -1.0
margin_right = 60.0
margin_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="next_level" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 64.0
margin_right = 380.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 4 )
text = "next level 2"
align = 1
valign = 1

[node name="dam_type" parent="VBoxContainer/next_level" instance=ExtResource( 5 )]
visible = false
margin_left = 280.0
margin_top = -5.0
margin_right = 310.0
margin_bottom = 27.0

[node name="next_desc" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 100.0
margin_right = 380.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "description"
autowrap = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
